--- a/index.html
+++ b/index.html
@@ -108,25 +108,25 @@
                 firmer, plumper and clearer skin.</p>
 
         </section>
-    
-   
-    <section class="clinically">
-        <div class="clinically-picture">
-            <img src="Images/kleem (1).jpg" alt="">
-        </div>
-        <div class="clinically-text">
-            <ul class="proven">
-                <li>Reduces fine lines & wrinkles</li>
-                <li>Evens out the skin tone</li>
-                <li>Rejuvenates and revitalizes the skin</li>
-                <li>Brightens dull skin</li>
-                <li>Lightens dark spots and hyperpigmentation</li>
-                <li>Promotes cellular renewal</li>
-                <li>Balances oil production and minimizes breakouts</li>
-            </ul>
-        </div>
-    </section>
-</main>
+
+
+        <section class="clinically">
+            <div class="clinically-picture">
+                <img src="Images/kleem (1).jpg" alt="">
+            </div>
+            <div class="clinically-text">
+                <ul class="proven">
+                    <li>Reduces fine lines & wrinkles</li>
+                    <li>Evens out the skin tone</li>
+                    <li>Rejuvenates and revitalizes the skin</li>
+                    <li>Brightens dull skin</li>
+                    <li>Lightens dark spots and hyperpigmentation</li>
+                    <li>Promotes cellular renewal</li>
+                    <li>Balances oil production and minimizes breakouts</li>
+                </ul>
+            </div>
+        </section>
+    </main>
 
 
 
@@ -158,73 +158,73 @@
             </div>
         </div>
     </section>
-        <main class="container">
-            <section class="retinol">
-                <h1>Retinol Cream Overview</h1>
-                <div class="retinol-six">
-                    <div class="retinol-cream">
+    <main class="container">
+        <section class="retinol">
+            <h1>Retinol Cream Overview</h1>
+            <div class="retinol-six">
+                <div class="retinol-cream">
 
-                        <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
-                        </div>
-                        <div class="retinol-text">
-                            <h5>Benefits:</h5>
-                            <p>For firmer skin and brighter complexion</p>
-                        </div>
-
+                    <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
                     </div>
-                    <div class="retinol-cream">
-
-                        <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
-                        </div>
-                        <div class="retinol-text">
-                            <h5>Ingredients:</h5>
-                            <p>Retinol, Vitamin E, Hyaluronic Acid, Phospholipids</p>
-                        </div>
-
+                    <div class="retinol-text">
+                        <h5>Benefits:</h5>
+                        <p>For firmer skin and brighter complexion</p>
                     </div>
-                    <div class="retinol-cream">
 
-                        <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
-                        </div>
-                        <div class="retinol-text">
-                            <h5>Skin Tone::</h5>
-                            <p>Fair - Medium - Medium Dark - Dark</p>
-                        </div>
-
-                    </div>
-                    <div class="retinol-cream">
-
-                        <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
-                        </div>
-                        <div class="retinol-text">
-                            <h5>Skin Type:</h5>
-                            <p>Combination - Oily - Normal - Dry</p>
-                        </div>
-
-                    </div>
-                    <div class="retinol-cream">
-
-                        <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
-                        </div>
-                        <div class="retinol-text">
-                            <h5>Texture:                            </h5>
-                            <p>Rich and nourishing yet fast-absorbing</p>
-                        </div>
-
-                    </div>
-                    <div class="retinol-cream">
-
-                        <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
-                        </div>
-                        <div class="retinol-text">
-                            <h5>Tolerance:</h5>
-                            <p>Non-comedogenic - Parabens Free - Suitable also for Sensitive Skin</p>
-                        </div>
-
-                    </div>
                 </div>
-            </section>
-        
+                <div class="retinol-cream">
+
+                    <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
+                    </div>
+                    <div class="retinol-text">
+                        <h5>Ingredients:</h5>
+                        <p>Retinol, Vitamin E, Hyaluronic Acid, Phospholipids</p>
+                    </div>
+
+                </div>
+                <div class="retinol-cream">
+
+                    <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
+                    </div>
+                    <div class="retinol-text">
+                        <h5>Skin Tone::</h5>
+                        <p>Fair - Medium - Medium Dark - Dark</p>
+                    </div>
+
+                </div>
+                <div class="retinol-cream">
+
+                    <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
+                    </div>
+                    <div class="retinol-text">
+                        <h5>Skin Type:</h5>
+                        <p>Combination - Oily - Normal - Dry</p>
+                    </div>
+
+                </div>
+                <div class="retinol-cream">
+
+                    <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
+                    </div>
+                    <div class="retinol-text">
+                        <h5>Texture: </h5>
+                        <p>Rich and nourishing yet fast-absorbing</p>
+                    </div>
+
+                </div>
+                <div class="retinol-cream">
+
+                    <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
+                    </div>
+                    <div class="retinol-text">
+                        <h5>Tolerance:</h5>
+                        <p>Non-comedogenic - Parabens Free - Suitable also for Sensitive Skin</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
 
 
 
@@ -233,9 +233,6 @@
         <section class="anti-aging">
             <h1>WHAT COUNTS IN A HIGHLY EFFECTIVE ANTI-AGING CREAM</h1>
             <div class="highly">
-                <div class="anti-aging-picture">
-                    <img src="Images/retinol_Step_5.webp" alt="">
-                </div>
                 <div class="anti-aging-text">
                     <p>
                         If you want to be your best self, feel more beautiful and confident in your own skin, you need
@@ -252,11 +249,54 @@
                         a radiantly healthy and replumped skin.
                     </p>
                 </div>
+                <div class="anti-aging-picture">
+                    <img src="Images/retinol_Step_5.webp" alt="">
+                </div>
+            </div>
+        </section>
 
+
+
+
+
+
+        <section class="quality">
+            <h1>QUALITY YOU CAN TRUST</h1>
+            <p>Kleem Organics directs all its efforts to deliver always genuine and high quality skin care products, for
+                which, thousands of satisfied customers and aestheticians recommend and trust us all around the world.
+            </p>
+            <div class="quality-con">
+                <div class="quality-img">
+                    <img src="Images/quality-assurance-testing.png" alt="">
+                </div>
+                <div class="quality-ul">
+                    <li>Organic Ingredients</li>
+                    <li>Doctor Trusted and GMP compliant</li>
+                    <li>Not Tested on Animals</li>
+                    <li>Made in USA</li>
+                    <li> Shelf Life Testing In-House (1 year)</li>
+                    <li>Airless Packaging</li>
+                    <li>NO Chemicals</li>
+                </div>
 
             </div>
         </section>
     </main>
+    <footer>
+        <section class="policy">
+            <div class="contacts">
+                <li>Contacts</li>
+                <li>Privacy & Policy</li>
+                <li>Terms and Conditions</li>
+            </div>
+            <div class="paragraph">
+            <p>Individual results may vary depending on skin type, sensitivity, skincare products combinations, skincare
+                history, as well as how the products are applied and stored.</p>
+            </div>
+                <br>
+                <p>© 2023 Copyright</p>
+        </section>
+    </footer>
 </body>
 
 </html>
