--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -167,7 +169,7 @@
                     <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
                     </div>
                     <div class="retinol-text">
-                        <h5>Benefits:</h5>
+                        <h3>Benefits:</h3>
                         <p>For firmer skin and brighter complexion</p>
                     </div>
 
@@ -177,7 +179,7 @@
                     <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
                     </div>
                     <div class="retinol-text">
-                        <h5>Ingredients:</h5>
+                        <h3>Ingredients:</h3>
                         <p>Retinol, Vitamin E, Hyaluronic Acid, Phospholipids</p>
                     </div>
 
@@ -187,7 +189,7 @@
                     <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
                     </div>
                     <div class="retinol-text">
-                        <h5>Skin Tone::</h5>
+                        <h3>Skin Tone:</h3>
                         <p>Fair - Medium - Medium Dark - Dark</p>
                     </div>
 
@@ -197,7 +199,7 @@
                     <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
                     </div>
                     <div class="retinol-text">
-                        <h5>Skin Type:</h5>
+                        <h3>Skin Type:</h3>
                         <p>Combination - Oily - Normal - Dry</p>
                     </div>
 
@@ -207,7 +209,7 @@
                     <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
                     </div>
                     <div class="retinol-text">
-                        <h5>Texture: </h5>
+                        <h3>Texture: </h3>
                         <p>Rich and nourishing yet fast-absorbing</p>
                     </div>
 
@@ -217,7 +219,7 @@
                     <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
                     </div>
                     <div class="retinol-text">
-                        <h5>Tolerance:</h5>
+                        <h3>Tolerance:</h3>
                         <p>Non-comedogenic - Parabens Free - Suitable also for Sensitive Skin</p>
                     </div>
 
@@ -281,7 +283,163 @@
 
             </div>
         </section>
+
+
+        <section class="apply">
+            <h1>How to apply</h1>
+            <p>Apply gently on the face and neck areas with upwards and outwards movements. If you it’s your first time
+                using a Retinol based product, start with a three/four times per week application so that your skin can
+                gradually adapt to the ingredients while also enjoying the benefits of this wonderful antioxidant. Apply
+                an optimal amount of product to cleansed face and neck every night. If this is your first time using a
+                retinol-based product, apply the cream 2–4 times a week.</p>
+        </section>
+
+        <section class="trusted">
+            <h1>Trusted by thousands of women for delivering healthier and more glowing skin</h1>
+            <div class="trusted-img">
+                <img src="Images/women.jpg" alt="">
+            </div>
+            <div class="reviews-swiper">
+                <div class="reviews">
+                    <div class="heart">
+                        <img src="Images/heart_comments.png" alt="">
+                    </div>
+                    <div class="mark">
+                        <p>4.8</p>
+                        <div class="stars"><img src="Images/stars.png" alt=""></div>
+
+                    </div>
+                    <p><b>2914 Reviews</b></p>
+                </div>
+
+
+
+                <div class="swiper mySwiper1">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="swiper-grid">
+                                <div class="swiper-img">
+                                    <img src="Images/customer-3.webp" alt="">
+                                </div>
+                                <p>I purchased this cream just to try something different. I
+                                    particularly liked the fact it was for both night and day. It is very light and
+                                    non-greasy,
+                                    and absorbs well into the skin. After just two weeks of use I can visibly see the
+                                    difference
+                                    in my skin, especially around the eyes. Friends say I look in my early 60s when I am
+                                    in
+                                    fact
+                                    in my late 70s. I just love this product.</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-grid">
+                                <div class="swiper-img">
+                                    <img src="Images/customer-3.webp" alt="">
+                                </div>
+                                <p>I purchased this cream just to try something different. I
+                                    particularly liked the fact it was for both night and day. It is very light and
+                                    non-greasy,
+                                    and absorbs well into the skin. After just two weeks of use I can visibly see the
+                                    difference
+                                    in my skin, especially around the eyes. Friends say I look in my early 60s when I am
+                                    in
+                                    fact
+                                    in my late 70s. I just love this product.</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-grid">
+                                <div class="swiper-img">
+                                    <img src="Images/customer-3.webp" alt="">
+                                </div>
+                                <p>I purchased this cream just to try something different. I
+                                    particularly liked the fact it was for both night and day. It is very light and
+                                    non-greasy,
+                                    and absorbs well into the skin. After just two weeks of use I can visibly see the
+                                    difference
+                                    in my skin, especially around the eyes. Friends say I look in my early 60s when I am
+                                    in
+                                    fact
+                                    in my late 70s. I just love this product.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                </div>
+            </div>
+
+
+        </section>
+        <section class="commited">
+            <h1>COMMITTED TO POSITIVE CHANGE
+            </h1>
+            <p>We always formulate without 1,300+ banned Ingredients, including:
+                Parabens, Mineral Oil, Sulfate-based Detergents, Synthetic Fragrance, Petroleum-based Ingredients,
+                Phthalates, Formaldehyde and GMO Ingredients. Good for your Skin – Good for our Planet On September
+                17th, 2019, we adhered to the Donations program as part of Kleem Organics’ commitment to achieve
+                net-zero carbon emissions globally by 2040, ten years in advance of the Paris Agreement.
+                We donate inventory to selected charitable organizations which include: Age UK, Barnardo's, British
+                Heart Foundation, Cancer Research, Newlife, Salvation Army, Scope, Sue Ryder, TRAID and others. With
+                more than 15,000 products donated to date, our commitment to a flourishing planet has only just begun.
+            </p>
+            <div class="button-grey">
+                <button class="order-now">Order Now</button>
+            </div>
+        </section>
+
+        <section class="frequently">
+            <h1>FREQUENTLY ASKED QUESTIONS
+            </h1>
+        </section>
+
+
+
+
+
+        <section class="last-order">
+            <div class="description">
+                <div><img src="Images/product.jpg" alt="">
+                </div>
+                <div class="description-two">
+                    <h1>ORDER NOW</h1>
+                    <div class="form">
+                        <input placeholder="Full Name" type="text">
+                        <!-- <li>Full Name</li>
+                    <li>Telephone</li>
+                    <li>Email</li>
+                    <li>Adress</li> -->
+                    </div>
+                    <div class="button-purple">
+                        <button class="purple-order">ORDER NOW</button>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
+
+
+
+
+
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <footer>
         <section class="policy">
             <div class="contacts">
@@ -290,13 +448,48 @@
                 <li>Terms and Conditions</li>
             </div>
             <div class="paragraph">
-            <p>Individual results may vary depending on skin type, sensitivity, skincare products combinations, skincare
-                history, as well as how the products are applied and stored.</p>
+                <p>Individual results may vary depending on skin type, sensitivity, skincare products combinations,
+                    skincare
+                    history, as well as how the products are applied and stored.</p>
             </div>
-                <br>
-                <p>© 2023 Copyright</p>
+            <br>
+            <p>© 2023 Copyright</p>
         </section>
     </footer>
+
+
+
+
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+        var swiper = new Swiper(".mySwiper1", {
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+        });
+    </script>
+
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+            pagination: {
+                el: ".swiper-pagination",
+            },
+        });
+    </script>
 </body>
+
+
+
+
+
+
+
+
+
+
 
 </html>
