--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
                 <div class="retinol-cream">
 
-                    <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
+                    <div class="retinol-images"><img src="Images/Ingredients-1.webp" alt="">
                     </div>
                     <div class="retinol-text">
                         <h3>Ingredients:</h3>
@@ -186,7 +186,7 @@
                 </div>
                 <div class="retinol-cream">
 
-                    <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
+                    <div class="retinol-images"><img src="Images/skintone.png" alt="">
                     </div>
                     <div class="retinol-text">
                         <h3>Skin Tone:</h3>
@@ -196,7 +196,7 @@
                 </div>
                 <div class="retinol-cream">
 
-                    <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
+                    <div class="retinol-images"><img src="Images/tolerance-1.avif" alt="">
                     </div>
                     <div class="retinol-text">
                         <h3>Skin Type:</h3>
@@ -206,7 +206,7 @@
                 </div>
                 <div class="retinol-cream">
 
-                    <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
+                    <div class="retinol-images"><img src="Images/texture-1.webp" alt="">
                     </div>
                     <div class="retinol-text">
                         <h3>Texture: </h3>
@@ -216,7 +216,7 @@
                 </div>
                 <div class="retinol-cream">
 
-                    <div class="retinol-images"><img src="Images/benefits-1.webp" alt="">
+                    <div class="retinol-images"><img src="Images" alt="">
                     </div>
                     <div class="retinol-text">
                         <h3>Tolerance:</h3>
@@ -257,6 +257,22 @@
             </div>
         </section>
 
+        <section class="looking-skin">
+            <h1>The 3 Rs For a Younger Looking Skin:</h1>
+            <div class="skin-background">
+                <ul>
+                    <li>Reduce signs of aging and hyperpigmentation
+                        through cell renewal & photo-healing</li>
+                    <li>Restore skin elasticity through
+                        deep hydratation & collagen synthesis</li>
+                    <li>Revitalize skin tone through skin nourishment & increased
+                        blood circulation</li>
+                </ul>
+            </div>
+        </section>
+
+
+
 
 
 
@@ -292,6 +308,7 @@
                 gradually adapt to the ingredients while also enjoying the benefits of this wonderful antioxidant. Apply
                 an optimal amount of product to cleansed face and neck every night. If this is your first time using a
                 retinol-based product, apply the cream 2–4 times a week.</p>
+                
         </section>
 
         <section class="trusted">
@@ -335,33 +352,25 @@
                         <div class="swiper-slide">
                             <div class="swiper-grid">
                                 <div class="swiper-img">
-                                    <img src="Images/customer-3.webp" alt="">
+                                    <img src="Images/customer-2.webp" alt="">
                                 </div>
-                                <p>I purchased this cream just to try something different. I
-                                    particularly liked the fact it was for both night and day. It is very light and
-                                    non-greasy,
-                                    and absorbs well into the skin. After just two weeks of use I can visibly see the
-                                    difference
-                                    in my skin, especially around the eyes. Friends say I look in my early 60s when I am
-                                    in
-                                    fact
-                                    in my late 70s. I just love this product.</p>
+                                <p>I have been using this cream in the mornings for the past
+                                    three
+                                    months. I have noticed a significant reduction in wrinkles and more plumpness in my
+                                    face. I
+                                    am truly amazed at this product! I love how light it is too. Highly recommend!</p>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="swiper-grid">
                                 <div class="swiper-img">
-                                    <img src="Images/customer-3.webp" alt="">
+                                    <img src="Images/customer-4.webp" alt="">
                                 </div>
-                                <p>I purchased this cream just to try something different. I
-                                    particularly liked the fact it was for both night and day. It is very light and
-                                    non-greasy,
-                                    and absorbs well into the skin. After just two weeks of use I can visibly see the
-                                    difference
-                                    in my skin, especially around the eyes. Friends say I look in my early 60s when I am
-                                    in
-                                    fact
-                                    in my late 70s. I just love this product.</p>
+                                <p>It took away dry skin I kept having between my eyebrows
+                                    and
+                                    nose
+                                    bridge , has smoothed out problem areas around my eyes too and forehead .. absorbed
+                                    beautifully, smells nice and leaves skin feeling really nice. Highly recommend</p>
                             </div>
                         </div>
                     </div>
@@ -406,12 +415,12 @@
                     <h1>ORDER NOW</h1>
                     <div class="form">
                         <input placeholder="Full Name" type="text">
-                        <!-- <li>Full Name</li>
-                    <li>Telephone</li>
-                    <li>Email</li>
-                    <li>Adress</li> -->
+                        <input placeholder="Telephone" type="number">
+                        <input placeholder="Email" type="text">
+                        <input placeholder="Adress" type="text">
                     </div>
-                    <div class="button-purple">
+                    <div class="button-price">
+                        <h2>34.99€</h2>
                         <button class="purple-order">ORDER NOW</button>
                     </div>
                 </div>
