--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <script src="https://kit.fontawesome.com/2490d5f2d0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -129,6 +130,76 @@
             </div>
         </section>
     </main>
+    <Section class="the-key">
+        <div class="org-ingrid">
+            <h1>The Key Natural & Organic Ingredients:
+            </h1>
+            <div class="retinol">
+                <div class="retinol-img">
+                    <img src="Images/Retinol.webp" alt="">
+                </div>
+                <div class="retinol-information">
+                    <h3>Retinol: </h3>
+                    <p>RESTORES: Stimulates collagen and elastin production thus restoring skin elasticity</p>
+                </div>
+            </div>
+            <div class="vitamin">
+                <div class="vitamin-img">
+                    <img src="Images/Vitamin-E.webp" alt="">
+                </div>
+                <div class="vitamin-information">
+                    <h3>Vitamin E:
+                    </h3>
+                    <p>NOURISHES: A powerful antioxidant that fights the negative effects of free radicals</p>
+                </div>
+            </div>
+
+
+            <div class="acid">
+                <div class="acid-img">
+                    <img src="Images/Hyaluronic_Acid.webp" alt="">
+                </div>
+                <div class="acid-information">
+                    <h3>Hyaluronic Acid:</h3>
+                    <p> FIRMS: Provides moisture, firmness and suppleness to the skin</p>
+                </div>
+            </div>
+            <div class="phospholipids">
+                <div class="phospholipids-img">
+                    <img src="Images/Phospholipids.webp" alt="">
+                </div>
+                <div class="phospholipids-information">
+                    <h3>Phospholipids:</h3>
+                    <p> HYDRATES: Strengthen and repair the skin barrier and provide deep hydration</p>
+                </div>
+            </div>
+            <div class="the-key-rose">
+                <button class="learn-less">Learn Less</button>
+            </div>
+        </div>
+
+        <div class="change">
+            <h1>I WILL NOT LET AGE CHANGE ME - I WILL CHANGE THE WAY I AGE
+            </h1>
+            <p> After the first application you will notice: </p>
+            <ul>
+                <li>A smoother complexion.</li>
+            </ul>
+
+            <p> After one month you will notice: </p>
+            <ul>
+                <li>Brighter and plumper skin</li>
+                <li>Attenuation of dark spots</li>
+                <li>A more even complexion</li>
+            </ul>
+            <p> After two months of twice a day application you will notice: </p>
+            <ul>
+                <li>A diminishment in fine lines and rejuvenated skin.</li>
+            </ul>
+
+        </div>
+
+    </Section>
 
 
 
@@ -216,7 +287,7 @@
                 </div>
                 <div class="retinol-cream">
 
-                    <div class="retinol-images"><img src="Images" alt="">
+                    <div class="retinol-images"><img src="Images/skintypedarke-1r (1).webp" alt="">
                     </div>
                     <div class="retinol-text">
                         <h3>Tolerance:</h3>
@@ -301,6 +372,7 @@
         </section>
 
 
+
         <section class="apply">
             <h1>How to apply</h1>
             <p>Apply gently on the face and neck areas with upwards and outwards movements. If you it’s your first time
@@ -308,7 +380,43 @@
                 gradually adapt to the ingredients while also enjoying the benefits of this wonderful antioxidant. Apply
                 an optimal amount of product to cleansed face and neck every night. If this is your first time using a
                 retinol-based product, apply the cream 2–4 times a week.</p>
-                
+
+        </section>
+
+        <section class="how-apply">
+            <div class="swiper mySwiper">
+                <div class="apply-swiper">
+                    <h3>Step 1</h3>
+                    <p class="apply-p">Cleanse your face, neck, and decollete with a 5.5 pH level cleanser that
+                        restores the skin’s
+                        barrier and helps keeping your skin hydrated and nourished. Use lukewarm water in order to
+                        melt away pollutants dirt, sebum and fragrance. The temperature of water is important as
+                        cold water can tighten your pores and this can trap bacteria and debris and won’t clear out
+                        your skin as easily as using warm water.
+                    </p>
+                    <div class="swiper-img">
+                        <img src="./images/ayra_300x300_cover_1.png" alt="">
+                    </div>
+                </div>
+                <div class="apply-swiper">
+                    <h3>Step 2</h3>
+                    <p class="swiper-p">Apply your cream and serum and wait until the products have been fully
+                        absorbed. Make sure
+                        you
+                        choose a product containing antioxidants to protect your skin from environmental aggressors.
+                    </p>
+                    <ul></ul>
+                </div>
+                <div class="apply-swiper">
+                    <h3>Step 3</h3>
+                        <p class="swiper-p">Wait for your skin to absorb the cream before getting dressed or putting on
+                            makeup. </p>
+                            <div class="swiper-img">
+                                <img src="./images/ayra_300x300_cover_7.png" alt="">
+                            </div>
+                </div>
+
+            </div>
         </section>
 
         <section class="trusted">
