--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
             </div>
             <div class="vitamin">
-                <div class="vitamin-img">
+                <div class="retinol-img">
                     <img src="Images/Vitamin-E.webp" alt="">
                 </div>
                 <div class="vitamin-information">
@@ -156,7 +156,7 @@
 
 
             <div class="acid">
-                <div class="acid-img">
+                <div class="retinol-img">
                     <img src="Images/Hyaluronic_Acid.webp" alt="">
                 </div>
                 <div class="acid-information">
@@ -165,7 +165,7 @@
                 </div>
             </div>
             <div class="phospholipids">
-                <div class="phospholipids-img">
+                <div class="retinol-img">
                     <img src="Images/Phospholipids.webp" alt="">
                 </div>
                 <div class="phospholipids-information">
@@ -173,7 +173,7 @@
                     <p> HYDRATES: Strengthen and repair the skin barrier and provide deep hydration</p>
                 </div>
             </div>
-            <div class="the-key-rose">
+            <div class="retinol-img">
                 <button class="learn-less">Learn Less</button>
             </div>
         </div>
@@ -385,37 +385,55 @@
 
         <section class="how-apply">
             <div class="swiper mySwiper">
-                <div class="apply-swiper">
-                    <h3>Step 1</h3>
-                    <p class="apply-p">Cleanse your face, neck, and decollete with a 5.5 pH level cleanser that
-                        restores the skin’s
-                        barrier and helps keeping your skin hydrated and nourished. Use lukewarm water in order to
-                        melt away pollutants dirt, sebum and fragrance. The temperature of water is important as
-                        cold water can tighten your pores and this can trap bacteria and debris and won’t clear out
-                        your skin as easily as using warm water.
-                    </p>
-                    <div class="swiper-img">
-                        <img src="./images/ayra_300x300_cover_1.png" alt="">
+                <div class="swiper-wrapper"> 
+                    <div class="swiper-slide">
+                        <div class="apply-swiper">
+                            <h3>Step 1</h3>
+                            <p class="apply-p">Cleanse your face, neck, and decollete with a 5.5 pH level cleanser that
+                                restores the skin’s
+                                barrier and helps keeping your skin hydrated and nourished. Use lukewarm water in order
+                                to
+                                melt away pollutants dirt, sebum and fragrance. The temperature of water is important as
+                                cold water can tighten your pores and this can trap bacteria and debris and won’t clear
+                                out
+                                your skin as easily as using warm water.
+                            </p>
+                            <div class="swiper-img">
+                                <img src="./images/ayra_300x300_cover_1.png" alt="">
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="apply-swiper">
-                    <h3>Step 2</h3>
-                    <p class="swiper-p">Apply your cream and serum and wait until the products have been fully
-                        absorbed. Make sure
-                        you
-                        choose a product containing antioxidants to protect your skin from environmental aggressors.
-                    </p>
-                    <ul></ul>
-                </div>
-                <div class="apply-swiper">
-                    <h3>Step 3</h3>
-                        <p class="swiper-p">Wait for your skin to absorb the cream before getting dressed or putting on
-                            makeup. </p>
+                    <div class="swiper-slide">
+                        <div class="apply-swiper">
+                            <h3>Step 2</h3>
+                            <p class="swiper-p">Apply your cream and serum and wait until the products have been fully
+                                absorbed. Make sure
+                                you
+                                choose a product containing antioxidants to protect your skin from environmental
+                                aggressors.
+                            </p>
+                            <div class="swiper-img-step-2">
+                                <img src="Images/ayra_300x300_cover_2.png" alt="">
+                                <img src="Images/ayra_300x300_cover_3.png" alt="">
+                                <img src="Images/ayra_300x300_cover_4.png" alt="">
+                                <img src="Images/ayra_300x300_cover_5.png" alt="">
+                                <img src="Images/ayra_300x300_cover_6.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="apply-swiper">
+                            <h3>Step 3</h3>
+                            <p class="swiper-p">Wait for your skin to absorb the cream before getting dressed or putting
+                                on
+                                makeup. </p>
                             <div class="swiper-img">
                                 <img src="./images/ayra_300x300_cover_7.png" alt="">
                             </div>
-                </div>
+                        </div>
+                    </div>
 
+                </div>
             </div>
         </section>
 
@@ -509,6 +527,81 @@
         <section class="frequently">
             <h1>FREQUENTLY ASKED QUESTIONS
             </h1>
+            <div class="questions">
+                <div class="question1">
+                    <h3>Does this product contain SPF?
+                    </h3>
+                    <p class="answer">No, this product does not contain spf. We have
+                        opted for not mixing Retinol with UV and UVB protection in the same product to avoid any kind of
+                        interaction (the combination of products that contain bio active ingredients can alter or
+                        neutralize their effects). What we always suggest is to apply sunscreen after the neck
+                        moisturizer has been absorbed and to apply in general sunscreen regardless of the cosmetic
+                        product that you are using. If you plan to spend a long time exposed to the sun, then it is
+                        better to apply the neck moisturizer only at PM.
+                    </p>
+                </div>
+                <div class="question2">
+                    <h3>Is it useful for dark spots on the neck?</h3>
+                    <p class="answer">Yes, the concentration of active ingredients, especially Retinol and
+                        Peptides, allow the cells to turn over faster and to produce more collagen therefore
+                        contributing to clearer and more even skin
+                    </p>
+                </div>
+                <div class="question3">
+                    <h3>Can I use the product if I am exposed extendedly to the sun?
+                    </h3>
+                    <p class="answer">No, if you expose extendedly to the sun it is best to apply the
+                        product during your night skin care routine.
+                    </p>
+                </div>
+                <div class="question4">
+                    <h3>Does retinol cause redness?</h3>
+                    <p class="answer">Retinol is a powerful and effective anti-aging ingredient. The
+                        percentage contained in the neck cream is moderate however, if it is your first time using
+                        Retinol, to avoid common side effects, such as slight redness or dryness, we encourage to start
+                        off with a gradual introduction in your skin care so that your skin can adjust to the ingredient
+                        while enjoying its extraordinary properties. Once your skin had adjusted to the product, you can
+                        switch to the once/twice a day application.</p>
+                </div>
+                <div class="question5">
+                    <h3>Can I use the product everyday?</h3>
+                    <p class="answer">If you have used Retinol before, you can use the product on a daily
+                        basis. In all other cases, we advise to start gradually in order for your skin to enjoy the
+                        beneficial properties of this ingredient while also allowing to adjust to it.
+                    </p>
+                </div>
+                <div class="question6">
+                    <h3>Does it have a scent?</h3>
+                    <p class="answer">The scent is very mild and delicate and it derives from plants
+                        extracts contained in the formulation.
+                    </p>
+                </div>
+                <div class="question7">
+                    <h3>What is the ingredients’ list?</h3>
+                    <p class="answer">Aloe Barbadensis Leaf Juice (Organic Aloe), Aqua, Cassia Angustifolia
+                        Seed Polysaccharide (Botanical Hyaluronic Acid), Isopropyl Palmitate, Helianthus Annuus Oil
+                        (Organic Sunflower), Glyceryl Stearate, Cetyl Alcohol, Retinol, Stearic Acid, Kosher Vegetable
+                        Glycerin, Butyrospermum Parkii Butter (Organic Shea), Simmondsia Chinesis Oil (Organic Jojoba),
+                        Panthenol (Vitamin B5), Tocopherol Acetate (Vitamin E), Camelia Sinensis Extract (Green Tea),
+                        Palmitoyl Tripeptide-5, Resina Propoli Extract (Propolis), Xanthan Gum, Dehydroacetic Acid,
+                        Benzyl Alcohol, Tetrasodium Glutamate Diacetate, Rose Ether, Ethylhexylglycerin.
+
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="customer-reviews">
+            <h3>CUSTOMER REVIEWS</h3>
+            <div class="mark">
+                <p>4.8</p>
+                <img src="Images/stars.png" alt="">
+                <p>Based on 2914 reviews</p>
+            </div>
+            <div class="mark">
+                
+            </div>
+
         </section>
 
 
@@ -517,7 +610,7 @@
 
         <section class="last-order">
             <div class="description">
-                <div><img src="Images/product.jpg" alt="">
+                <div class="last-picture"><img src="Images/product.jpg" alt="">
                 </div>
                 <div class="description-two">
                     <h1>ORDER NOW</h1>
